<resources>
    <string name="app_name">Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="cellphone">Cell Phone Number</string>
    <string name="informacoes">Informações</string>
    <string name="save">Salvar</string>
    <string name="edit">Editar</string>
    <string name="delete">deletar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="ipsum">Here I tal about me and my dreams and all the things I want to conquer in the world</string>
    <string name="list">Contatos</string>
    <string name="temperatura_de_hoje">Temperatura de hoje</string>


</resources>
