<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="left"
    android:padding="10dp"
    android:id="@+id/itemBTN">

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTV"/>

    <TextView
        android:id="@+id/phoneTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cellphone"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTV"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@id/phoneTV"/>

    <Button
        android:id="@+id/editBTN"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:text="@string/edit"
        android:textSize="12sp"
        app:layout_constraintRight_toLeftOf="@id/deleteBTN"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#ffffff"
        android:visibility="gone"
        android:textColor="@color/colorButtonText"/>

    <Button
        android:id="@+id/deleteBTN"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:text="@string/delete"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#ffffff"
        android:visibility="gone"
        android:textColor="@color/colorButtonText"/>

</android.support.constraint.ConstraintLayout>